<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product from bottom button</string>
    <string name="hint_name">Product name</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_price">Price</string>
    <string name="hint_discount">Discount</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_supp_name">Name</string>
    <string name="hint_supp_email">E-Mail</string>
    <string name="hint_supp_phone">Phone</string>
    <string name="editor_header_product_info">Product Information</string>
    <string name="editor_header_supplier_info">Supplier Information</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="toast_error_saving_product">Error while saving product</string>
    <string name="toast_successfully_saved_product">Product saved</string>
    <string name="toast_successfully_updated_product">Product updated</string>
    <string name="toast_error_updating_product">Product update failed</string>
    <string name="editor_delete_product_failed">Error while deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="toast_error_picking_image">Error while picking image</string>
    <string name="field_cannot_empty">This field is required.</string>
    <string name="toast_image_cannot_empty">Image is required</string>
    <string name="title_activity_details">Product Details</string>
    <string name="details_text_name">Product name</string>
    <string name="details_text_brand">Brand</string>
    <string name="details_text_category">Category</string>
    <string name="details_text_price">Price</string>
    <string name="details_text_discount">Discount</string>
    <string name="details_text_stock">Stock</string>
    <string name="details_button_dec">-</string>
    <string name="details_button_inc">+</string>
    <string name="details_text_supp_name">Supplier Name</string>
    <string name="details_text_supp_email">Supplier email</string>
    <string name="details_text_supp_phone">Supplier Phone</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_edit">Edit Product</string>
    <string name="toast_delete_all">Deleted all products</string>
    <string name="toast_error_deleting">Error while deleting</string>
    <string name="toast_no_email_app">No email apps found</string>
    <string name="currency">INR #</string>
    <string name="congratulations">Congrats on sale!</string>
    <string name="toast_no_stock">No stock available</string>
    <string name="delete_all_dialog_msg">Delete all product?</string>
</resources>
