<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!--Product Imageview-->
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_image_height"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_a_photo"/>

        <!--Product information-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_header_product_info"
            style="@style/EditorColumnHeaderStyle"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_name"
                android:inputType="text"
                style="@style/EditorEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_brand"
                android:inputType="text"
                style="@style/EditorEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:spinnerMode="dropdown"
            style="@style/EditorEditTextStyle">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal"
                    style="@style/EditorEditTextStyle"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_discount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_discount"
                    android:inputType="numberDecimal"
                    style="@style/EditorEditTextStyle"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_stock"
                android:inputType="number"
                style="@style/EditorEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

        <!--Supplier information-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_header_supplier_info"
            style="@style/EditorColumnHeaderStyle"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_supp_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_supp_name"
                android:inputType="text"
                style="@style/EditorEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_supp_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_supp_email"
                android:inputType="textEmailAddress"
                style="@style/EditorEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_supp_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_supp_phone"
                android:inputType="phone"
                style="@style/EditorEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>